[gd_scene load_steps=18 format=2]

[ext_resource path="res://game/game.gd" type="Script" id=1]
[ext_resource path="res://UI/fonts/Piedra-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/team_composition_view.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Inventory.tscn" type="PackedScene" id=4]
[ext_resource path="res://collectables/Level.tscn" type="PackedScene" id=5]
[ext_resource path="res://shaders/softshadow.shader" type="Shader" id=6]
[ext_resource path="res://buildings/buildingSelection.tscn" type="PackedScene" id=7]
[ext_resource path="res://shaders/fullscreen_viewport.gd" type="Script" id=8]
[ext_resource path="res://player/Base.tscn" type="PackedScene" id=9]
[ext_resource path="res://game/time_of_day.gd" type="Script" id=11]
[ext_resource path="res://shaders/color_tint.shader" type="Shader" id=12]
[ext_resource path="res://audio/night.ogg" type="AudioStream" id=13]
[ext_resource path="res://audio/day.ogg" type="AudioStream" id=14]
[ext_resource path="res://buildings/buildingSelection.gd" type="Script" id=15]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 12 )
shader_param/tint_color = Color( 1, 1, 1, 1 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 6 )
shader_param/offset = Vector2( 4, -4 )
shader_param/modulate = Color( 0, 0, 0, 1 )
shader_param/blurRadius = 6.372
shader_param/sampleRadius = 4
shader_param/shadowAlpha = 1.5

[sub_resource type="DynamicFont" id=3]
size = 128
font_data = ExtResource( 2 )

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="buildingSelection" parent="." instance=ExtResource( 7 )]
offset = Vector2( 980, 50 )
transform = Transform2D( 1, 0, 0, 1, 980, 50 )
script = ExtResource( 15 )

[node name="Player_Inventory" parent="." instance=ExtResource( 4 )]

[node name="Base_Inventory" parent="." instance=ExtResource( 4 )]

[node name="color_tint_container" type="ViewportContainer" parent="."]
material = SubResource( 1 )
focus_mode = 2
mouse_filter = 2
stretch = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="viewport" type="Viewport" parent="color_tint_container"]
handle_input_locally = false
render_target_update_mode = 3
physics_object_picking = true

[node name="shadow_casters_container" type="ViewportContainer" parent="color_tint_container/viewport"]
material = SubResource( 2 )
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 2
stretch = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="viewport" type="Viewport" parent="color_tint_container/viewport/shadow_casters_container"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
physics_object_picking = true

[node name="Level" parent="color_tint_container/viewport/shadow_casters_container/viewport" instance=ExtResource( 5 )]

[node name="GoodBase" parent="color_tint_container/viewport/shadow_casters_container/viewport" instance=ExtResource( 9 )]
good_team = true

[node name="EvilBase" parent="color_tint_container/viewport/shadow_casters_container/viewport" instance=ExtResource( 9 )]

[node name="time_of_day" type="Node" parent="."]
script = ExtResource( 11 )

[node name="day" type="AudioStreamPlayer" parent="time_of_day"]
stream = ExtResource( 14 )
autoplay = true

[node name="night" type="AudioStreamPlayer" parent="time_of_day"]
stream = ExtResource( 13 )

[node name="loading_screen" type="ColorRect" parent="."]
visible = false
margin_left = 55.0
margin_top = 60.0
margin_right = 1398.0
margin_bottom = 659.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="loading_screen"]
margin_right = 1347.0
margin_bottom = 603.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="loading_screen/CenterContainer"]
margin_left = 409.0
margin_top = 218.0
margin_right = 938.0
margin_bottom = 385.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Loading ... "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="team_composition_good" parent="." instance=ExtResource( 3 )]
margin_left = 33.0207
margin_top = 641.732
margin_right = 33.0207
margin_bottom = 641.732

[node name="team_composition_evil" parent="." instance=ExtResource( 3 )]
margin_left = 1116.0
margin_top = 639.973
margin_right = 1116.0
margin_bottom = 639.973
